feat: complete remaining 7 optimization items
Phase 1 - Performance:
- 1.3 Added React.lazy() for page components with code splitting
- 1.4 Improved chunk separation (pages now load on demand)
  - Initial bundle reduced significantly
  - Pages load separately: AuthPage (4.75KB), DashboardPage (9.45KB), etc.

Phase 2 - User Experience:
- 2.4 Added history search/filter functionality
  - Search by notes/partner name
  - Filter by mood
  - Updated logs API with filter params

Phase 3 - Security:
- 3.3 Added CSRF token management in _auth.ts
  - generateCsrfToken(), setCsrfToken(), validateCsrf()
  - requireAuthWithCsrf() for protected endpoints

Phase 4 - Reliability:
- 4.1 Added cron trigger config in wrangler.toml (commented for Pages)
- 4.2 Created _errorLog.ts for R2 error logging

Phase 5 - Code Quality:
- 5.3 Created _env.ts for environment validation

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -26,3 +26,10 @@ bucket_name = "intimome-backups"
 # OPENROUTER_MODEL = "openai/gpt-4o-mini"
 # GOOGLE_CLIENT_ID = "your-google-client-id"
 # BACKUP_SECRET = "your-backup-secret"
+
+# Scheduled cron triggers for automatic backups
+# Note: Cron triggers are only supported for Workers, not Pages Functions
+# To enable, deploy as a Worker or use external cron service to call /api/backup
+# [triggers]
+# crons = ["0 0 * * *"] # Daily at midnight UTC
+
