--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
     "name": "IntimDiary",
     "short_name": "IntimDiary",
-    "description": "Private intimacy wellness tracker",
+    "description": "私密亲密健康追踪应用",
     "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "background_color": "#fafafa",
     "theme_color": "#f43f5e",
@@ -12,12 +13,20 @@
             "src": "/favicon.png",
             "sizes": "192x192",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "any"
+        },
+        {
+            "src": "/favicon.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ],
     "categories": [
         "health",
         "lifestyle"
     ],
-    "lang": "zh-CN"
+    "lang": "zh-CN",
+    "dir": "ltr",
+    "prefer_related_applications": false
 }
